<resources>
    <string name="app_name">Setlist Manager</string>

    <string name="setlists_title">Setlists</string>
    <string name="add_setlist_title">Add setlist</string>
    <string name="edit_setlist_title">Edit setlist</string>
    <string name="setlist_name">Name</string>
    <string name="setlist_date">Date</string>
    <string name="addedit_setlist_name_cannot_be_emtpy">Name cannot be empty.</string>
    <string name="addedit_setlist_save_error">Could not save the setlist. Please try again.</string>
    <string name="addedit_setlist_fetch_error">Could not get the data for the requested setlist.</string>

    <string name="add_songs_to_setlist_title">Add songs to</string>

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_duplicate">Duplicate</string>
    <string name="context_menu_remove">Remove</string>
    <string name="context_menu_open">Open</string>

    <string name="confirm_dialog_delete_setlist_title">Remove setlist</string>
    <string name="confirm_dialog_delete_setlist_message">Are you sure you want to remove setlist</string>
    <string name="confirm_dialog_delete_song_title">Remove song</string>
    <string name="confirm_dialog_delete_song_message">Are you sure you want to remove song</string>
    <string name="confirm_dialog_delete_song_message_note">NOTE! The song will also be removed from all setlists.</string>
    <string name="song_deleted_successfully">Song deleted successfully.</string>
    <string name="song_delete_failed">Failed to delete song.</string>

    <string name="songs_title">Songs</string>
    <string name="add_song_title">Add song</string>
    <string name="edit_song_title">Edit song</string>
    <string name="addedit_save_failed">Save failed. Check title and filepath.</string>
    <string name="addedit_song_title_cannot_be_emtpy">Title cannot be empty.</string>
    <string name="addedit_save_error">Could not save the song. Please try again.</string>
    <string name="addedit_fetch_error">Could not get the data for the requested song.</string>
    <string name="song_title">Title</string>
    <string name="song_artist">Artist</string>
    <string name="song_file">File</string>

    <string name="settings_title">Settings</string>

    <string name="common_saving">Saving...</string>
    <string name="common_saved">Saved</string>

    <string name="button_save">Save</string>
    <string name="button_OK">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select_file">Select file</string>

    <string name="menu_item_add">Add</string>
    <string name="menu_item_nav">MENU</string>
    <string name="setlist_location">Location</string>

    <string name="drawer_open">Menu</string>
    <string name="drawer_close">Close</string>

    <string name="screen_slider_no_data_available">No data available. The file may not exist or the song may have been removed from the catalogue within the application.</string>

    <string name="search_title">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Setlists</string>
    <string name="tab_text_2">Songs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="undo">UNDO</string>

</resources>
