<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add"
        android:icon="@android:drawable/ic_input_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_item_add"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/nav"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_item_nav"
        android:titleCondensed="@string/menu_item_nav"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/nav_setlists"
                android:title="@string/setlists_title" />
            <item
                android:id="@+id/nav_songs"
                android:title="@string/songs_title" />
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings_title" />
        </menu>
    </item>

</menu>