<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addedit_song_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="setlistmanager.song.AddEditSongActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_title" />

            <EditText
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_border_normal"
                />

            <TextView
                android:id="@+id/label_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_artist" />

            <EditText
                android:id="@+id/song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_border_normal"/>

            <TextView
                android:id="@+id/song_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_file" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/thumbnail_border"
                    android:padding="1dp"
                    android:layout_marginBottom="20dp">
                </RelativeLayout>

                <Button
                    android:id="@+id/button_select_file"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbnail"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="@string/button_select_file"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="10dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/save_cancel_buttons"/>

</LinearLayout>